Moved `RecordType`'s features to `ProxyType`, and removed `RecordType`. The `isRecordType` predicate is now `hasOrderedFields`.